# vertex-geyser-plugin

./: .gitignore  Cargo.toml  README.md  config.json  rustfmt.toml
src/: config.rs  geyser_plugin_vertex.rs  lib.rs  postgres_client.rs
