[package]
name = "vertex-geyser-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[profile.release]
debug = true

[dependencies]
agave-geyser-plugin-interface = "=2.2.1"
anyhow = "1.0.98"
bs58 = "0.5.1"

clap = "4.5.32"
clap_derive = "4.5.32"

serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"

openssl = { version = "0.10" }
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}

log = "0.4.27"

solana-account-decoder = "=2.2.1"
solana-logger = "=2.2.1"
solana-sdk = "=2.2.1"